--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,13 +31,23 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/score"
+        android:id="@+id/score1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score: 0"
-        android:textSize="50sp"
+        android:text="Player 1 Score: 0"
+        android:textSize="30sp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="250dp"
+        android:layout_centerHorizontal="true"
+        />
+    <TextView
+        android:id="@+id/score2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Player 2 Score: 0"
+        android:textSize="30sp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="150dp"
         android:layout_centerHorizontal="true"
         />
     <Button
